crates/ic-lint/tests/snapshots/multiple_default_cases__complex_union.snap
---
source: crates/ic-lint/tests/multiple_default_cases.rs
expression: test_lint_hir(source)
---
error[multiple_default_cases]: union `ComplexUnion` has 2 default cases, but only one is allowed
    ┌ test.idl:10:22
    │
 10 │     default: boolean fallback1;
    ·                      ^^^^^^^^^ first default case here
 12 │     default: double fallback2;  // Error
    ·                     ^^^^^^^^^ additional default case here
    └──
