crates/ic-lint/tests/snapshots/multiple_default_cases__default_case_ordering.snap
---
source: crates/ic-lint/tests/multiple_default_cases.rs
expression: test_lint_hir(source)
---
error: union 'MyUnion' has multiple default cases
   ┌ test.idl:6:21
   │
 6 │     default: double d;  // Error: second default
   ·                     ^ duplicate default
   └──

error: union `MyUnion` has 2 default cases, but only one is allowed
   ┌ test.idl:6:21
   │
 6 │     default: double d;  // Error: second default
   ·                     ^ additional default case here
 3 │     default: string s;  // Default at beginning
   ·                     ^ first default case here
   └──

error: multiple default cases in union `MyUnion`
   ┌ test.idl:6:21
   │
 6 │     default: double d;  // Error: second default
   ·                     ^ default case already defined
   └──
