crates/ic-lint/tests/snapshots/multiple_default_cases__multiple_default_cases.snap
---
source: crates/ic-lint/tests/multiple_default_cases.rs
expression: test_lint_hir(source)
---
error: union 'MyUnion' has multiple default cases
   ┌ test.idl:6:21
   │
 6 │     default: double d;  // Error: multiple default cases
   ·                     ^ duplicate default
   └──

error: union `MyUnion` has 2 default cases, but only one is allowed
   ┌ test.idl:6:21
   │
 6 │     default: double d;  // Error: multiple default cases
   ·                     ^ additional default case here
 4 │     default: string s;
   ·                     ^ first default case here
   └──
