crates/ic-lint/tests/snapshots/multiple_default_cases__nested_unions.snap
---
source: crates/ic-lint/tests/multiple_default_cases.rs
expression: test_lint_hir(source)
---
error[multiple_default_cases]: union `Inner` has 2 default cases, but only one is allowed
    ┌ test.idl:10:21
    │
 10 │     default: double d2;  // Error in inner union
    ·                     ^^ additional default case here
  9 │     default: double d1;
    ·                     ^^ first default case here
    └──
