crates/ic-lint/tests/snapshots/multiple_default_cases__three_default_cases.snap
---
source: crates/ic-lint/tests/multiple_default_cases.rs
expression: test_lint_hir(source)
---
error[multiple_default_cases]: union `MyUnion` has 3 default cases, but only one is allowed
   ┌ test.idl:4:21
   │
 4 │     default: string s;
   ·                     ^ first default case here
 5 │     default: float f;
   ·                    ^ additional default case here
 6 │     default: double d;  // Error: 3 default cases
   ·                     ^ additional default case here
   └──
