crates/ic-lint/tests/snapshots/multiple_default_cases__union_in_interface.snap
---
source: crates/ic-lint/tests/multiple_default_cases.rs
expression: test_lint_hir(source)
---
error[multiple_default_cases]: union `Result` has 2 default cases, but only one is allowed
   ┌ test.idl:5:23
   │
 5 │         default: long error1;
   ·                       ^^^^^^ first default case here
 6 │         default: long error2;  // Error
   ·                       ^^^^^^ additional default case here
   └──
